--- a/03_Construct_Knowledge_Graph.ipynb
+++ b/03_Construct_Knowledge_Graph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeSCXdZEggXlCiapM01JIO",
+      "authorship_tag": "ABX9TyMTnWqOkshxDNGkPu7E4Zda",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -448,6 +448,11 @@
         "from neo4j_graphrag.llm import OpenAILLM\n",
         "from neo4j_graphrag.embeddings import OpenAIEmbeddings\n",
         "\n",
+        "neo4j_answering_llm = OpenAILLM(\n",
+        "    model=DEPLOYMENT_NAME,\n",
+        "    api_key=OPENAI_API_KEY\n",
+        ")\n",
+        "\n",
         "llm = OpenAILLM(\n",
         "    model_name=\"gpt-4.1\",\n",
         "    model_params={\"temperature\": 0}\n",
@@ -713,35 +718,46 @@
         "    RelationshipType,\n",
         ")\n",
         "\n",
-        "schema_builder = SchemaBuilder()\n",
-        "\n",
+        "schema_builder = SchemaBuilder()\n"
+      ],
+      "metadata": {
+        "id": "xzev9C8HB7In"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the possible node types\n",
         "node_types = [\n",
         "    NodeType(\n",
-        "        label=\"Person\",\n",
-        "        description=\"An individual participating in the conference — attendee, speaker, presenter, or facilitator.\",\n",
+        "        label=\"Speaker\",\n",
+        "        description=\"An individual who presents or speaks at sessions, panels, keynote, opening remarks, or workshops.\",\n",
         "        properties=[\n",
-        "            {\"name\": \"name\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"organization\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"designation\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"bio\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"linkedin_url\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"role\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"awards\", \"type\": \"LIST\"},\n",
-        "            {\"name\": \"is_speaker\", \"type\": \"BOOLEAN\"},\n",
+        "            {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The full name of the speaker.\"},\n",
+        "            {\"name\": \"organization\", \"type\": \"STRING\", \"description\": \"The organization the speaker is affiliated with.\"},\n",
+        "            {\"name\": \"designation\", \"type\": \"STRING\", \"description\": \"The job title or role of the speaker within their organization.\"},\n",
+        "            {\"name\": \"bio\", \"type\": \"STRING\", \"description\": \"A detailed and rich biography of the speaker.\"},\n",
+        "            {\"name\": \"linkedin_url\", \"type\": \"STRING\", \"description\": \"The LinkedIn profile URL of the speaker.\"},\n",
+        "            {\"name\": \"awards\", \"type\": \"LIST\", \"description\": \"A list of awards or recognitions received by the speaker.\"},\n",
+        "            {\"name\": \"is_hackpanel\", \"type\": \"BOOLEAN\", \"description\": \"Indicates if the speaker is part of a hack panel.\"},\n",
+        "            {\"name\": \"skills\", \"type\": \"LIST\", \"description\": \"A list of technical or professional skills the speaker possesses.\"},\n",
+        "            {\"name\": \"interests\", \"type\": \"LIST\", \"description\": \"A list of the speaker's areas of interest.\"},\n",
+        "            {\"name\": \"certifications\", \"type\": \"LIST\", \"description\": \"A list of certifications held by the speaker.\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
         "        label=\"Workshop\",\n",
-        "        description=\"A hands-on technical session conducted during the summit.\",\n",
+        "        description=\"A hands-on technical day long session conducted during the conference.\",\n",
         "        properties=[\n",
-        "            {\"name\": \"title\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"description\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"instructor\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"start_time\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"duration\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"level\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"prerequisites\", \"type\": \"LIST\"},\n",
-        "            {\"name\": \"tools_used\", \"type\": \"LIST\"},\n",
+        "            {\"name\": \"title\", \"type\": \"STRING\", \"description\": \"The title of the workshop.\"},\n",
+        "            {\"name\": \"description\", \"type\": \"STRING\", \"description\": \"A rich summary or abstract of the workshop.\"},\n",
+        "            {\"name\": \"instructor\", \"type\": \"STRING\", \"description\": \"The name(s) of the workshop instructor(s).\"},\n",
+        "            {\"name\": \"start_time\", \"type\": \"STRING\", \"description\": \"The start time of the workshop.\"},\n",
+        "            {\"name\": \"level\", \"type\": \"STRING\", \"description\": \"The intended experience level for the workshop (e.g., 'beginner', 'intermediate', 'advanced').\"},\n",
+        "            {\"name\": \"prerequisites\", \"type\": \"LIST\", \"description\": \"A list of prerequisites for attending the workshop.\"},\n",
+        "            {\"name\": \"tools_used\", \"type\": \"LIST\", \"description\": \"A list of tools or technologies used in the workshop.\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
@@ -749,8 +765,9 @@
         "        description=\"A presentation or talk delivered during the conference.\",\n",
         "        properties=[\n",
         "            {\"name\": \"title\", \"type\": \"STRING\", \"description\": \"The title of the session.\"},\n",
-        "            {\"name\": \"description\", \"type\": \"STRING\", \"description\": \"A summary or abstract of the session.\"},\n",
-        "            {\"name\": \"session_type\", \"type\": \"STRING\",\"description\": \"The format of the session, e.g., Keynote, Hack Session, PowerTalk, Opening Remark, Awards\"},\n",
+        "            {\"name\": \"description\", \"type\": \"STRING\", \"description\": \"A rich summary or abstract of the session.\"},\n",
+        "            {\"name\": \"instructor\", \"type\": \"STRING\", \"description\": \"The name(s) of the session instructor(s).\"},\n",
+        "            {\"name\": \"session_type\", \"type\": \"STRING\",\"description\": \"The format of the session, e.g., Keynote, Hack Session, PowerTalk, Opening Remark, Closing Remarks Awards\"},\n",
         "            {\"name\": \"theme\", \"type\": \"STRING\", \"description\": \"The main topic or track the session belongs to.\"},\n",
         "            {\"name\": \"tools_discussed\", \"type\": \"LIST\", \"description\": \"A list of tools or technologies discussed during the session.\"},\n",
         "            {\"name\": \"level\", \"type\": \"STRING\", \"description\": \"Intended experience level of the audience, e.g., beginner, intermediate, advanced.\"},\n",
@@ -758,67 +775,76 @@
         "            {\"name\": \"end_time\", \"type\": \"LOCAL_TIME\", \"description\": \"End time of the session in HH:MM format\"},\n",
         "            {\"name\": \"day\", \"type\": \"STRING\", \"description\": \"On which day is the session being conducted - Day number of the event. e.g., Day 1, Day 2, Day 3\"},\n",
         "            {\"name\": \"date\", \"type\": \"DATE\", \"description\": \"Date of the session in DD-MM-YYY format\"},\n",
-        "            {\"name\": \"venue\", \"type\": \"STRING\", \"description\": \"Venue or room where session is held. e.g., SAM, ELON, MARK, JENSEN\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
         "    label=\"Venue\",\n",
-        "    description=\"Physical location of the session. e.g., SAM, ELON, MARK, JENSEN\",\n",
+        "    description=\"Physical location of the session. e.g., ChatGPT, Gemini, Grok, Claude\",\n",
         "    properties=[\n",
-        "        {\"name\": \"name\", \"type\": \"STRING\"},\n",
+        "        {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the venue or room where the session or workshop or conference is held.\"},\n",
         "    ]\n",
         "),\n",
         "    NodeType(\n",
         "        label=\"Sponsor\",\n",
         "        description=\"An organization providing financial or logistical support for the conference.\",\n",
         "        properties=[\n",
-        "            {\"name\": \"name\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"level\", \"type\": \"STRING\"},\n",
+        "            {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the sponsoring organization.\"},\n",
+        "            {\"name\": \"description\", \"type\": \"STRING\", \"description\": \"Rich description about the sponsoring company.\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
         "        label=\"Company\",\n",
-        "        description=\"A business or organization affiliated with a person or sponsoring the summit.\",\n",
+        "        description=\"A business or organization affiliated with the speaker or sponsoring the conference.\",\n",
         "        properties=[\n",
-        "            {\"name\": \"name\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"industry\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"website\", \"type\": \"STRING\"},\n",
+        "            {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the company.\"},\n",
+        "            {\"name\": \"industry\", \"type\": \"STRING\", \"description\": \"The industry the company operates in.\"},\n",
+        "            {\"name\": \"website\", \"type\": \"STRING\", \"description\": \"The official website of the company.\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
         "        label=\"University\",\n",
         "        description=\"A higher education institution.\",\n",
         "        properties=[\n",
-        "           {\"name\": \"name\", \"type\": \"STRING\"},\n",
+        "           {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the university.\"},\n",
         "        ],\n",
         "        ),\n",
         "    NodeType(\n",
         "        label=\"Conference\",\n",
         "        description=\"The DataHack Summit event as a whole.\",\n",
         "        properties=[\n",
-        "            {\"name\": \"name\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"year\", \"type\": \"INTEGER\"},\n",
-        "            {\"name\": \"location\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"theme\", \"type\": \"STRING\"},\n",
+        "            {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the conference.\"},\n",
+        "            {\"name\": \"year\", \"type\": \"INTEGER\", \"description\": \"The year the conference is held.\"},\n",
+        "            {\"name\": \"location\", \"type\": \"STRING\", \"description\": \"The physical location where the conference takes place.\"},\n",
+        "            {\"name\": \"theme\", \"type\": \"STRING\", \"description\": \"The overarching theme of the conference.\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
         "        label=\"Tool\",\n",
         "        description=\"AI/ML software, framework, or platform used during sessions or workshops.\",\n",
         "        properties=[\n",
-        "            {\"name\": \"name\", \"type\": \"STRING\"},\n",
-        "            {\"name\": \"type\", \"type\": \"STRING\"},\n",
+        "            {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the tool.\"},\n",
+        "            {\"name\": \"type\", \"type\": \"STRING\", \"description\": \"The type of tool (e.g., 'framework', 'library', 'platform').\"},\n",
         "        ],\n",
         "    ),\n",
         "    NodeType(\n",
         "        label=\"Topic\",\n",
         "        description=\"A subject area covered in a session or workshop (e.g., Agentic RAG, LLMs).\",\n",
         "        properties=[\n",
-        "            {\"name\": \"name\", \"type\": \"STRING\"},\n",
+        "            {\"name\": \"name\", \"type\": \"STRING\", \"description\": \"The name of the topic.\"},\n",
         "        ],\n",
         "    ),\n",
-        "]\n",
-        "\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "_1UTvrlo7sA2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the relationships between the nodes\n",
         "relationship_types = [\n",
         "    RelationshipType(\n",
         "        label=\"SPONSORS\",\n",
@@ -846,13 +872,7 @@
         "    description=\"Session is hosted at a venue.\",\n",
         "    properties=[]\n",
         "),\n",
-        "    RelationshipType(\n",
-        "        label=\"ATTENDS\",\n",
-        "        description=\"Person attends a Session or Workshop.\",\n",
-        "        properties=[\n",
-        "            {\"name\": \"description\", \"type\": \"STRING\", \"description\": \"Describes the relationship between the Person (source) and Session/Workshop (target).\"}\n",
-        "        ]\n",
-        "    ),\n",
+        "\n",
         "    RelationshipType(\n",
         "        label=\"HOSTS\",\n",
         "        description=\"Conference hosts a Session or Workshop.\",\n",
@@ -890,28 +910,39 @@
         "    ),\n",
         "\n",
         "]\n",
-        "\n",
-        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "SDFA_oAA5IG1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the possible patterns\n",
         "patterns = [\n",
-        "    (\"Sponsor\", \"SPONSORS\", \"Conference\"),\n",
-        "    (\"Person\", \"WORKS_FOR\", \"Company\"),\n",
-        "    (\"Person\", \"PRESENTS\", \"Session\"),\n",
-        "    (\"Person\", \"CONDUCTS\", \"Workshop\"),\n",
-        "    (\"Person\", \"ATTENDS\", \"Workshop\"),\n",
-        "    (\"Person\", \"ATTENDS\", \"Session\"),\n",
         "    (\"Conference\", \"HOSTS\", \"Workshop\"),\n",
         "    (\"Conference\", \"HOSTS\", \"Session\"),\n",
-        "    (\"Session\", \"USES\", \"Tool\"),\n",
+        "\t(\"Conference\", \"HOSTED_AT\", \"Venue\"),\n",
+        "\t(\"Sponsor\", \"SPONSORS\", \"Conference\"),\n",
+        "    (\"Speaker\", \"WORKS_FOR\", \"Company\"),\n",
+        "    (\"Speaker\", \"PRESENTS\", \"Session\"),\n",
+        "    (\"Speaker\", \"CONDUCTS\", \"Workshop\"),\n",
+        "    (\"Speaker\", \"WINS\", \"Award\"),\n",
+        "    (\"Speaker\", \"AFFILIATED_WITH\", \"University\"),\n",
+        "\t(\"Session\", \"USES\", \"Tool\"),\n",
         "    (\"Session\", \"COVERS\", \"Topic\"),\n",
+        "\t(\"Session\", \"HOSTED_AT\", \"Venue\"),\n",
         "    (\"Workshop\", \"USES\", \"Tool\"),\n",
         "    (\"Workshop\", \"COVERS\", \"Topic\"),\n",
-        "    (\"Session\", \"HOSTED_AT\", \"Venue\"),\n",
-        "    (\"Person\", \"AFFILIATED_WITH\", \"University\"),\n",
+        "\t(\"Workshop\", \"HOSTED_AT\", \"Venue\"),\n",
         "\n",
         "]"
       ],
       "metadata": {
-        "id": "xzev9C8HB7In"
+        "id": "7xJobSUP7yNU"
       },
       "execution_count": null,
       "outputs": []
