--- a/02_traditional_rag_vs_agentic_rag.ipynb
+++ b/02_traditional_rag_vs_agentic_rag.ipynb
@@ -146,6 +146,41 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Initialize Langfuse Handler for Tracing"
+      ],
+      "metadata": {
+        "id": "vCDZ_igvEFuq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langfuse.langchain import CallbackHandler\n",
+        "from langfuse import get_client\n",
+        "\n",
+        "os.environ[\"LANGFUSE_PUBLIC_KEY\"] = os.getenv(\"LANGFUSE_PUBLIC_KEY\")\n",
+        "os.environ[\"LANGFUSE_SECRET_KEY\"] = os.getenv(\"LANGFUSE_SECRET_KEY\")\n",
+        "os.environ[\"LANGFUSE_HOST\"] = \"https://cloud.langfuse.com\"\n",
+        "\n",
+        "langfuse = get_client()\n",
+        "\n",
+        "# Verify connection\n",
+        "if langfuse.auth_check():\n",
+        "    print(\"Langfuse client is authenticated and ready!\")\n",
+        "else:\n",
+        "    print(\"Authentication failed. Please check your credentials and host.\")\n",
+        "\n",
+        "langfuse_handler = CallbackHandler()"
+      ],
+      "metadata": {
+        "id": "5zxO9whDEF9h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Indexing"
       ],
       "metadata": {
@@ -548,7 +583,7 @@
         "from IPython.display import Markdown\n",
         "\n",
         "question = \"Which topics are the most frequently covered across all sessions and workshops at DHS 2025?\"\n",
-        "response = rag_chain.invoke({\"input\": question})\n",
+        "response = rag_chain.invoke({\"input\": question},config={\"callbacks\": [langfuse_handler]})\n",
         "\n",
         "Markdown(response[\"answer\"])"
       ],
@@ -579,7 +614,7 @@
       },
       "source": [
         "question = \"List down all the sessions or workshops which uses LangGraph?\"\n",
-        "response = rag_chain.invoke({\"input\": question, })\n",
+        "response = rag_chain.invoke({\"input\": question}, config={\"callbacks\": [langfuse_handler]})\n",
         "\n",
         "Markdown(response[\"answer\"])"
       ],
@@ -760,7 +795,8 @@
         "answer = generate_agent.invoke(\n",
         "            {\n",
         "                \"input\": question,\n",
-        "            }\n",
+        "            },\n",
+        "            config={\"callbacks\": [langfuse_handler]}\n",
         "        )\n",
         "Markdown(answer[\"output\"])"
       ],
@@ -1476,7 +1512,8 @@
         "answer = generate_agent.invoke(\n",
         "            {\n",
         "                \"input\": question,\n",
-        "            }\n",
+        "            },\n",
+        "            config={\"callbacks\": [langfuse_handler]}\n",
         "        )\n",
         "Markdown(answer[\"output\"])"
       ],
@@ -1591,7 +1628,8 @@
         "answer = generate_agent.invoke(\n",
         "            {\n",
         "                \"input\": question,\n",
-        "            }\n",
+        "            },\n",
+        "            config={\"callbacks\": [langfuse_handler]}\n",
         "        )\n",
         "Markdown(answer[\"output\"])"
       ],
