--- a/01_crawl_av_pages.ipynb
+++ b/01_crawl_av_pages.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7b85a617"
+        "id": "2770b72b"
       },
       "source": [
         "# Table of Contents\n",
@@ -50,7 +50,8 @@
         "- [4. Web Crawler With Filtering](#4-Web-Crawler-With-Filtering)\n",
         "- [5. Further Manual Filtering](#5-Further-Manual-Filtering)\n",
         "- [6. Convert Crawled HTML to Markdown](#6-Convert-Crawled-HTML-to-Markdown)\n",
-        "- [7. Save and Inspect Results](#7-Save-and-Inspect-Results)"
+        "- [7. Add Agenda to the Cleaned data](#7-Add-Agenda-to-the-Cleaned-data)\n",
+        "- [8. Save and Inspect Results](#8--Save-and-Inspect-Results)"
       ]
     },
     {
@@ -801,12 +802,12 @@
         "display(Markdown(markdown_table))\n"
       ],
       "metadata": {
-        "id": "bxsDbNlJkfct",
-        "outputId": "62addb52-9c96-4383-ca2b-302cb026992d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "bxsDbNlJkfct",
+        "outputId": "62addb52-9c96-4383-ca2b-302cb026992d"
       },
       "execution_count": 7,
       "outputs": [
