--- a/03_Construct_Knowledge_Graph.ipynb
+++ b/03_Construct_Knowledge_Graph.ipynb
@@ -789,7 +789,7 @@
         "            {\"name\": \"title\", \"type\": \"STRING\", \"description\": \"The title of the session.\"},\n",
         "            {\"name\": \"description\", \"type\": \"STRING\", \"description\": \"A rich summary or abstract of the session.\"},\n",
         "            {\"name\": \"instructor\", \"type\": \"STRING\", \"description\": \"The name(s) of the session instructor(s).\"},\n",
-        "            {\"name\": \"session_type\", \"type\": \"STRING\",\"description\": \"The format of the session, e.g., Keynote, Hack Session, PowerTalk, Opening Remark, Closing Remarks Awards\"},\n",
+        "            {\"name\": \"session_type\", \"type\": \"STRING\",\"description\": \"The format of the session, e.g., Keynote, Hack Session, PowerTalk, Opening Remark, Closing Remarks Awards, Hack Panel\"},\n",
         "            {\"name\": \"theme\", \"type\": \"STRING\", \"description\": \"The main topic or track the session belongs to.\"},\n",
         "            {\"name\": \"tools_discussed\", \"type\": \"LIST\", \"description\": \"A list of tools or technologies discussed during the session.\"},\n",
         "            {\"name\": \"level\", \"type\": \"STRING\", \"description\": \"Intended experience level of the audience, e.g., beginner, intermediate, advanced.\"},\n",
